--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -4,6 +4,13 @@ on:
   push:
 
 jobs:
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ macos-lastest, windows-lastest ]
+        java: ['8', '11', '17']
 
   test:
     runs-on: ubuntu-20.04
