--- a/.github/workflows/basic-workflow.yml
+++ b/.github/workflows/basic-workflow.yml
@@ -4,21 +4,19 @@ on:
   push:
 
 jobs:
-  build:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ macos-lastest, windows-lastest ]
         java: ['8', '11', '17']
-
-  test:
-    runs-on: ubuntu-20.04
+    name: Java ${{ matrix.Java }} sample 
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
-          java-version: '17'
+          java-version: ${{ matrix.Java }}
       - run: mvn test
